@@ -13,7 +13,7 @@ jobs:
         shell: bash -el {0}
     strategy:
       matrix:
-        python-version: [ "3.8", "3.9", "3.10", "3.11", "3.12", "3.13" ]
+        python-version: [ "3.11", "3.12", "3.13" ]
 
     steps:
       -
